# split_picture_gui

./: .gitignore  README.md  fun.txt  main.py  main.spec  pyproject.toml  split-picture-gui.spec  split_gui.spec
arguments/: curve.xlsx
modules/: algorithm.py  basic.py  camera.py  draw.py  record.py
notice/: environment.yml
samples/2_13/origin_img/ABTS/: ABTS-透明板无盖.tif  ABTS-透明盖.tif  ABTS-黑圈板.tif
samples/2_13/origin_img/AEC/: AEC-透明板无盖.tif  AEC-透明盖.tif  AEC-黑圈板.tif
samples/2_13/origin_img/OPD/: OPD-透明板无盖.tif  OPD-透明盖.tif  OPD-黑圈板.tif
samples/2_13/origin_img/TMB/: TMB-透明板无盖.tif  TMB-透明盖.tif  TMB-黑圈板.tif
samples/系列浓度223-显色结果/: 说明.doc
test/: find_fun.py  gray_hist.py  heat_map.py  line_map.py
test/find_circle/: find_circle.py
ui/: MainWindow.ui  MainWindow_ui.py
