[project]
name = "split-picture-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.46.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyinstaller>=6.15.0",
    "pyside6>=6.9.1",
]
